使用 Colaboratory 建立

--- a/import_kaggle_dataset.ipynb
+++ b/import_kaggle_dataset.ipynb
@@ -30,18 +30,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f495d9c5-ff33-4384-93ba-cb2a8488c6a9"
+        "outputId": "be1b8bbe-c161-4777-e399-3c7c5d1dbc5e"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 1,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -66,17 +66,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "86335896-1784-4af1-a691-94c9bb7e2aab"
+        "outputId": "2ae5660d-c754-411a-c4bf-f35d887b445a"
       },
       "source": [
-        "%cd /content/gdrive/My Drive/kaggle_dataset_self-driving-cars"
+        "%cd /content/gdrive/My Drive/kaggle_dataset_siim-covid19-detection"
       ],
-      "execution_count": 10,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "/content/gdrive/My Drive/kaggle_dataset_self-driving-cars\n"
+            "/content/gdrive/My Drive/kaggle_dataset_siim-covid19-detection\n"
           ],
           "name": "stdout"
         }
@@ -85,13 +85,40 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dhsiY9axew7A"
+        "id": "dhsiY9axew7A",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "5bfcd710-a6ec-4986-e0f6-eee5cc47acb2"
       },
       "source": [
         "!ls"
       ],
-      "execution_count": 12,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "09cf9767a7bf.dcm.zip  5e0e7acd9c7d.dcm.zip  bf1f75117093.dcm.zip\n",
+            "0cccb1eca1fc.dcm.zip  6534a837497d.dcm.zip  c39146cbda47.dcm.zip\n",
+            "12a2dfb55b6f.dcm.zip  65761e66de9f.dcm.zip  cea591e99b8a.dcm.zip\n",
+            "136af218f8df.dcm.zip  695e2c6dede4.dcm.zip  ced40f593496.dcm.zip\n",
+            "1df3e98f79be.dcm.zip  6c42a41a6c6e.dcm.zip  dbae9b9b9500.dcm.zip\n",
+            "26fa9834387e.dcm.zip  74077a8e3b7c.dcm.zip  e92b08b5a77c.dcm.zip\n",
+            "3019399c31f4.dcm.zip  7e7d3afebf5d.dcm.zip  f6293b1c49e2.dcm.zip\n",
+            "390ce1f029e7.dcm.zip  92552b44c70c.dcm.zip  f6ba3df9a8be.dcm.zip\n",
+            "3dcdfc352a06.dcm.zip  951211f8e1bb.dcm.zip  fec0249d70e4.dcm\n",
+            "3fadf4b48db3.dcm      ad8d4a5ba8f0.dcm.zip  kaggle.json\n",
+            "45742200dd51.dcm.zip  ad98af65ad2a.dcm.zip  sample_submission.csv\n",
+            "51635cbfbe18.dcm.zip  af7d1bd1d629.dcm.zip  train_image_level.csv\n",
+            "51759b5579bc.dcm.zip  b81969467c6b.dcm.zip  train_image_level.csv.zip\n",
+            "53b4af5b74d7.dcm.zip  b98508598396.dcm.zip  train_study_level.csv\n",
+            "5af15b21333b.dcm.zip  bb4b1da810f3.dcm.zip\n",
+            "5b8ee5baa1d5.dcm.zip  bcd2179fa24e.dcm.zip\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -103,8 +130,8 @@
         "outputId": "8240207b-17f2-4a10-d1f3-bc3be76cc5f9"
       },
       "source": [
-        "!kaggle datasets download -d alincijov/self-driving-cars\n",
-        "# !kaggle competitions download -c 'siim-covid19-detection'"
+        "# !kaggle datasets download -d alincijov/self-driving-cars\n",
+        "!kaggle competitions download -c 'siim-covid19-detection'"
       ],
       "execution_count": 13,
       "outputs": [
@@ -164,7 +191,7 @@
         "outputId": "6f15f27e-5fd7-4792-b426-b5a9893ee99e"
       },
       "source": [
-        "!unzip self-driving-cars.zip"
+        "# !unzip self-driving-cars.zip"
       ],
       "execution_count": 14,
       "outputs": [
@@ -5183,10 +5210,7 @@
         "id": "-jh1d9KhfVMo"
       },
       "source": [
-        "# import cv2\n",
-        "# from google.colab.patches import cv2_imshow\n",
-        "# img=cv2.imread('/content/gdrive/My Drive/kaggle_dataset/flowers-recognition/flowers/daisy/100080576_f52e8ee070_n.jpg')\n",
-        "# cv2_imshow(img)"
+        ""
       ],
       "execution_count": 8,
       "outputs": []
@@ -5195,6 +5219,197 @@
       "cell_type": "code",
       "metadata": {
         "id": "5IBhSH6uDaE0"
+      },
+      "source": [
+        "name=[]\n",
+        "import zipfile\n",
+        "\n",
+        "for dirname, _, filenames in os.walk(\"/content/gdrive/My Drive/kaggle_dataset_siim-covid19-detection\"):\n",
+        "    for filename in filenames:\n",
+        "      if filename[-4:]=='.zip':\n",
+        "        name.append(os.path.basename(filename))\n",
+        "        zip_ref = zipfile.ZipFile(filename) # create zipfile object\n",
+        "        zip_ref.extractall(\"/content/gdrive/My Drive/kaggle_dataset_siim-covid19-detection\") # extract file to dir\n",
+        "        zip_ref.close() # close file\n",
+        "        os.remove(filename)\n",
+        "        "
+      ],
+      "execution_count": 47,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5aeNH7tSmvtN",
+        "outputId": "cc379d8b-63e8-440b-e11c-71f69bdf053a"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['136af218f8df.dcm.zip',\n",
+              " 'b98508598396.dcm.zip',\n",
+              " 'f6293b1c49e2.dcm.zip',\n",
+              " '3019399c31f4.dcm.zip',\n",
+              " 'bb4b1da810f3.dcm.zip',\n",
+              " '92552b44c70c.dcm.zip',\n",
+              " '09cf9767a7bf.dcm.zip',\n",
+              " 'ad8d4a5ba8f0.dcm.zip',\n",
+              " '6534a837497d.dcm.zip',\n",
+              " '74077a8e3b7c.dcm.zip',\n",
+              " 'bf1f75117093.dcm.zip',\n",
+              " '390ce1f029e7.dcm.zip',\n",
+              " '1df3e98f79be.dcm.zip',\n",
+              " '12a2dfb55b6f.dcm.zip',\n",
+              " '7e7d3afebf5d.dcm.zip',\n",
+              " 'b81969467c6b.dcm.zip',\n",
+              " '65761e66de9f.dcm.zip',\n",
+              " '51759b5579bc.dcm.zip',\n",
+              " '45742200dd51.dcm.zip',\n",
+              " 'bcd2179fa24e.dcm.zip',\n",
+              " '5af15b21333b.dcm.zip',\n",
+              " '51635cbfbe18.dcm.zip',\n",
+              " '3dcdfc352a06.dcm.zip',\n",
+              " 'af7d1bd1d629.dcm.zip',\n",
+              " 'c39146cbda47.dcm.zip',\n",
+              " '0cccb1eca1fc.dcm.zip',\n",
+              " '695e2c6dede4.dcm.zip',\n",
+              " 'cea591e99b8a.dcm.zip',\n",
+              " '6c42a41a6c6e.dcm.zip',\n",
+              " 'e92b08b5a77c.dcm.zip',\n",
+              " 'ced40f593496.dcm.zip',\n",
+              " 'ad98af65ad2a.dcm.zip',\n",
+              " '951211f8e1bb.dcm.zip',\n",
+              " '26fa9834387e.dcm.zip',\n",
+              " '5e0e7acd9c7d.dcm.zip',\n",
+              " '53b4af5b74d7.dcm.zip',\n",
+              " 'f6ba3df9a8be.dcm.zip',\n",
+              " 'dbae9b9b9500.dcm.zip',\n",
+              " '5b8ee5baa1d5.dcm.zip',\n",
+              " 'train_image_level.csv.zip']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 40
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SzRM-zOBmx6R",
+        "outputId": "d34eb065-d395-4cf4-91c1-0a8b239a4822"
+      },
+      "source": [
+        "for Filename in name:\n",
+        "  print(Filename)\n",
+        "  # !unzip Filename.zip"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "136af218f8df.dcm\n",
+            "b98508598396.dcm\n",
+            "f6293b1c49e2.dcm\n",
+            "3019399c31f4.dcm\n",
+            "bb4b1da810f3.dcm\n",
+            "92552b44c70c.dcm\n",
+            "09cf9767a7bf.dcm\n",
+            "ad8d4a5ba8f0.dcm\n",
+            "6534a837497d.dcm\n",
+            "74077a8e3b7c.dcm\n",
+            "bf1f75117093.dcm\n",
+            "390ce1f029e7.dcm\n",
+            "1df3e98f79be.dcm\n",
+            "12a2dfb55b6f.dcm\n",
+            "7e7d3afebf5d.dcm\n",
+            "b81969467c6b.dcm\n",
+            "65761e66de9f.dcm\n",
+            "51759b5579bc.dcm\n",
+            "45742200dd51.dcm\n",
+            "bcd2179fa24e.dcm\n",
+            "5af15b21333b.dcm\n",
+            "51635cbfbe18.dcm\n",
+            "3dcdfc352a06.dcm\n",
+            "af7d1bd1d629.dcm\n",
+            "c39146cbda47.dcm\n",
+            "0cccb1eca1fc.dcm\n",
+            "695e2c6dede4.dcm\n",
+            "cea591e99b8a.dcm\n",
+            "6c42a41a6c6e.dcm\n",
+            "e92b08b5a77c.dcm\n",
+            "ced40f593496.dcm\n",
+            "ad98af65ad2a.dcm\n",
+            "951211f8e1bb.dcm\n",
+            "26fa9834387e.dcm\n",
+            "5e0e7acd9c7d.dcm\n",
+            "53b4af5b74d7.dcm\n",
+            "f6ba3df9a8be.dcm\n",
+            "dbae9b9b9500.dcm\n",
+            "5b8ee5baa1d5.dcm\n",
+            "train_image_level.csv\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YUIPVtOplGVm",
+        "outputId": "81d860f7-a928-4764-a9f7-584e3d570db6"
+      },
+      "source": [
+        "! ls"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "09cf9767a7bf.dcm.zip  5e0e7acd9c7d.dcm.zip  bf1f75117093.dcm.zip\n",
+            "0cccb1eca1fc.dcm.zip  6534a837497d.dcm.zip  c39146cbda47.dcm.zip\n",
+            "12a2dfb55b6f.dcm.zip  65761e66de9f.dcm.zip  cea591e99b8a.dcm.zip\n",
+            "136af218f8df.dcm.zip  695e2c6dede4.dcm.zip  ced40f593496.dcm.zip\n",
+            "1df3e98f79be.dcm.zip  6c42a41a6c6e.dcm.zip  dbae9b9b9500.dcm.zip\n",
+            "26fa9834387e.dcm.zip  74077a8e3b7c.dcm.zip  e92b08b5a77c.dcm.zip\n",
+            "3019399c31f4.dcm.zip  7e7d3afebf5d.dcm.zip  f6293b1c49e2.dcm.zip\n",
+            "390ce1f029e7.dcm.zip  92552b44c70c.dcm.zip  f6ba3df9a8be.dcm.zip\n",
+            "3dcdfc352a06.dcm.zip  951211f8e1bb.dcm.zip  fec0249d70e4.dcm\n",
+            "3fadf4b48db3.dcm      ad8d4a5ba8f0.dcm.zip  kaggle.json\n",
+            "45742200dd51.dcm.zip  ad98af65ad2a.dcm.zip  sample_submission.csv\n",
+            "51635cbfbe18.dcm.zip  af7d1bd1d629.dcm.zip  train_image_level.csv\n",
+            "51759b5579bc.dcm.zip  b81969467c6b.dcm.zip  train_image_level.csv.zip\n",
+            "53b4af5b74d7.dcm.zip  b98508598396.dcm.zip  train_study_level.csv\n",
+            "5af15b21333b.dcm.zip  bb4b1da810f3.dcm.zip\n",
+            "5b8ee5baa1d5.dcm.zip  bcd2179fa24e.dcm.zip\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_of5xXOvlYYO"
       },
       "source": [
         ""
