--- a/peak_fitting.ipynb
+++ b/peak_fitting.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "peak_fitting_sample.ipynb",
+      "name": "peak_fitting.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMdZf95coOzK+Ky1sCHV/mO",
+      "authorship_tag": "ABX9TyOh08ym4WmqZq4vUS4O4e1e",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -101,12 +101,12 @@
         "from lmfit import Model\n",
         "from numpy import exp, pi, sqrt\n",
         "import matplotlib.pyplot as plt\n",
-        "from scipy.signal import find_peaks"
+        "from scipy.signal import find_peaks,peak_widths"
       ],
       "metadata": {
         "id": "W3wm6UouhAX1"
       },
-      "execution_count": 20,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -379,6 +379,17 @@
     {
       "cell_type": "code",
       "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "jOC1V4FToj06"
+      },
+      "execution_count": 93,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "peaks, _ = find_peaks(df.intensity, height=500,distance=150,width=20)\n",
         "gmodel = Model(gaussian)\n",
         "plt.plot(df.raman_shift, df.intensity)\n",
@@ -386,10 +397,9 @@
         "\n",
         "range=150\n",
         "\n",
-        "for peak in peaks:\n",
-        "  \n",
-        "  \n",
         "\n",
+        "\n",
+        "for peak in peaks:\n",
         "  x=df.raman_shift[peak-range:peak+range]\n",
         "  y=df.intensity[peak-range:peak+range]\n",
         "  result = gmodel.fit(y, x=x, amp=df.intensity[peak], cen=df.raman_shift[peak], wid=20)\n",
@@ -406,9 +416,9 @@
           "height": 1000
         },
         "id": "WoJQXN89lZM-",
-        "outputId": "12bbad46-7199-4df4-bd9d-a742a2ea54df"
+        "outputId": "827607f8-24f3-49c5-9e94-693a72721ce8"
       },
-      "execution_count": 78,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
