--- a/peak_fitting.ipynb
+++ b/peak_fitting.ipynb
@@ -6,7 +6,7 @@
       "name": "peak_fitting.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNrXxTGsoTj1fAz5A8AFG5L",
+      "authorship_tag": "ABX9TyN+rGwkcjsA3PbQ8KCnAaWc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -368,7 +368,7 @@
       "cell_type": "code",
       "source": [
         "def gaussian(x, amp, cen, wid):\n",
-        "    return (amp * exp(-(x-cen)**2 / (2*wid**2)))\n"
+        "    return (amp * exp(-(x-cen)**2 / (2*wid**2)))"
       ],
       "metadata": {
         "id": "XUSfHtLSMeoJ"
@@ -386,9 +386,6 @@
         "gmodel = Model(gaussian)\n",
         "plt.plot(df.raman_shift, df.intensity)\n",
         "\n",
-        "\n",
-        "# x=df.raman_shift\n",
-        "# y=df.intensity\n",
         "\n",
         "for index, peak in enumerate(peaks):\n",
         "  range=int(wid[index]*5)\n",
@@ -412,9 +409,9 @@
           "height": 1000
         },
         "id": "WoJQXN89lZM-",
-        "outputId": "3d2f5da3-d7f7-4212-fae4-c01a61955a56"
+        "outputId": "6dedd2ba-9473-4958-de82-23c9ea6765b1"
       },
-      "execution_count": 53,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -501,7 +498,7 @@
       "metadata": {
         "id": "K4ZrhZ9lg_dp"
       },
-      "execution_count": null,
+      "execution_count": 54,
       "outputs": []
     }
   ]
