使用 Colaboratory 建立

--- a/peak_fitting.ipynb
+++ b/peak_fitting.ipynb
@@ -6,7 +6,7 @@
       "name": "peak_fitting.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPGgRsSY/qXjuaHLsdPef7p",
+      "authorship_tag": "ABX9TyO58yGHZnXwF/CU0kOWw9MS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -564,6 +564,7 @@
         "  mod = PseudoVoigtModel()\n",
         "  pars = mod.guess(y, x=x)\n",
         "  out = mod.fit(y, pars, x=x)\n",
+        "  print('-'*30)\n",
         "  print(out.fit_report(min_correl=0.25))\n",
         "  plt.plot(x, out.best_fit, '-', label='best fit '+str(index))\n",
         "  \n",
@@ -571,18 +572,19 @@
       ],
       "metadata": {
         "id": "K4ZrhZ9lg_dp",
-        "outputId": "da60ef2b-0a3e-4f7b-98c3-90eb7f0182a7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "61a6f6d0-2a69-42f8-eef6-e5c89795bca4"
       },
-      "execution_count": 28,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "------------------------------\n",
             "[[Model]]\n",
             "    Model(pvoigt)\n",
             "[[Fit Statistics]]\n",
@@ -604,6 +606,7 @@
             "[[Correlations]] (unreported correlations are < 0.250)\n",
             "    C(sigma, fraction)     = -0.702\n",
             "    C(amplitude, fraction) = 0.564\n",
+            "------------------------------\n",
             "[[Model]]\n",
             "    Model(pvoigt)\n",
             "[[Fit Statistics]]\n",
@@ -625,6 +628,7 @@
             "[[Correlations]] (unreported correlations are < 0.250)\n",
             "    C(amplitude, fraction) = 0.682\n",
             "    C(sigma, fraction)     = -0.650\n",
+            "------------------------------\n",
             "[[Model]]\n",
             "    Model(pvoigt)\n",
             "[[Fit Statistics]]\n",
